<resources>
    <string name="app_name">MapLook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_name">安卓小分队</string>
    <string name="message_lastestcontent">大家好啊</string>
    <string name="contacts_name">安卓小分队</string>



    <!--LoadActivity-->
    <string name="tv_load_title">麻蒲路</string>

    <!--LoginActivity-->
    <string name="tv_login_title">登录</string>
    <string name="tv_login_account">账号</string>
    <string name="tv_login_pwd">密码</string>
    <string name="btn_login_login">登录</string>
    <string name="btn_login_register">无账号？点此注册</string>
    <string name="btn_login_fogetpwd">忘记密码</string>

    <!--RegisterActivity-->
    <string name="tv_register_title">注册</string>
    <string name="tv_register_gender">性别</string>
    <string-array name="sp_register_gender_array">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="tv_register_securequestionhint1">密保问题1</string>
    <string name="tv_register_securequestion1">您的生日是？</string>
    <string name="tv_register_secureanswerhint1">回答</string>
    <string name="tv_register_secureanswer1">例：19950512</string>
    <string name="tv_register_securequestionhint2">密保问题2</string>
    <string name="tv_register_securequestion2">您父亲的姓名是？</string>
    <string name="tv_register_secureanswerhint2">回答</string>
    <string name="tv_register_secureanswer2">例：张元瀚</string>
    <string name="tv_register_pwdhint">密码</string>
    <string name="tv_register_confirmpwdhint">确认密码</string>
    <string name="btn_register_register">注册</string>

    <!--ShowAccountActivity-->
    <string name="tv_showaccount_title">注册成功</string>
    <string name="tv_showaccount_accounthint">您的账号为</string>
    <string name="tv_showaccount_account">524414145</string>
    <string name="btn_showaccount_backtologin">返回登录界面</string>

    <!--VerifyActivity-->
    <string name="tv_verify_title">验证密保</string>
    <string name="tv_verify_securequestionhint1">密保问题1</string>
    <string name="tv_verify_securequestion1">您的生日是？</string>
    <string name="tv_verify_secureanswerhint1">回答</string>
    <string name="tv_verify_secureanswer1">例：19950512</string>
    <string name="tv_verify_securequestionhint2">密保问题2</string>
    <string name="tv_verify_securequestion2">您父亲的姓名是？</string>
    <string name="tv_verify_secureanswerhint2">回答</string>
    <string name="tv_verify_secureanswer2">例：张元瀚</string>
    <string name="btn_verify_verify">验证</string>
    
    <!--ReserPasswordActivity-->
    <string name="tv_resetpassword_title">重置密码</string>
    <string name="tv_resetpassword_resethint">重置密码</string>
    <string name="tv_resetpassword_confirmhint">确认密码</string>
    <string name="btn_resetpassword_save">保存</string>

    <!--HomeActivity-->
    <string name="tv_home_title_message">消息</string>
    <string name="tv_home_title_contacts">好友</string>
    <string name="tv_home_title_discovery">发现</string>
    <string name="tv_home_title_setting">设置</string>
    <string name="tv_home_text_message">消息</string>
    <string name="tv_home_text_contacts">好友</string>
    <string name="tv_home_text_discovery">发现</string>
    <string name="tv_home_text_setting">设置</string>

    <!--MessageFragment-->
    <string name="tv_message_name_1">嗯哼嗯哼大王嗬嗬哈嘿</string>
    <string name="tv_message_message_1">晚安！加油</string>
    <string name="tv_message_time_1">23:56</string>
    <string name="tv_message_name_2">子丑寅卯</string>
    <string name="tv_message_message_2">好，谢谢</string>
    <string name="tv_message_time_2">昨天</string>
    <string name="tv_message_name_3">z</string>
    <string name="tv_message_message_3">你有啊，我</string>
    <string name="tv_message_time_3">前天</string>

    <!--ContactsFragment-->
    <string name="et_contacts_search">搜索</string>
    <string name="tv_contacts_name_1">嗯哼嗯哼大王嗬嗬哈嘿</string>
    <string name="tv_contacts_name_2">子丑寅卯</string>
    <string name="tv_contacts_name_3">z</string>

    <!--SettingFragment-->
    <string name="btn_setting_info">基本资料</string>
    <string name="btn_setting_chatbg">聊天背景</string>
    <string name="btn_setting_quit">退出登录</string>

    <!--**CardActivity共用-->
    <string name="tv_card_hphint">头像</string>
    <string name="tv_card_genderhint">性别</string>
    <string name="tv_card_namehint">昵称</string>
    <string name="tv_card_descriptionhint">个人说明</string>


    <!--PersonalCardActivity-->
    <string name="tv_personalcard_title">个人资料</string>
    <string name="tv_personalcard_gender">男</string>
    <string name="tv_personalcard_name">你好像很好吃</string>
    <string name="tv_personalcard_description">Now get out of my life</string>
    <string name="btn_personalcard_alterhp">修改头像</string>
    <string name="btn_personalcard_alterinfo">修改资料</string>

    <!--HandleCardActivity-->
    <string name="tv_handlecard_title">好友请求</string>
    <string name="tv_handlecard_gender">男</string>
    <string name="tv_handlecard_name">Tinyuet</string>
    <string name="tv_handlecard_description">这个世界，还有太多的神奇，我们要一直欢笑，去发现美好。</string>
    <string name="btn_handlecard_accept">接受请求</string>
    <string name="btn_handlecard_reject">拒绝请求</string>

    <!--StrangerCardActivity-->
    <string name="tv_strangercard_title">详细资料</string>
    <string name="tv_strangercard_gender">男</string>
    <string name="tv_strangercard_name">后知后觉</string>
    <string name="tv_strangercard_description">父母给你的是背景，自己打下来的才叫江山！</string>
    <string name="btn_strangercard_addfriend">添加朋友</string>
    
    <!--FriendCardActivity-->
    <string name="tv_friendcard_title">详细资料</string>
    <string name="tv_friendcard_gender">男</string>
    <string name="tv_friendcard_name">z</string>
    <string name="tv_friendcard_description">(wff)不断正确的认识自己以及持续自我更新另外不要做个自私的人</string>
    <string name="btn_friendcard_sendmsg">发送消息</string>

    <!--AlterActivity-->
    <string name="tv_alter_title">修改资料</string>
    <string name="tv_alter_namehint">昵称</string>
    <string name="et_alter_name">你好像很好吃</string>
    <string name="tv_alter_discriptionhint">个人说明</string>
    <string name="et_alter_discription">Now get out of my life</string>
    <string name="tv_alter_pwdhint">用户密码</string>
    <string name="et_alter_pwd">maplook.0512</string>
    <string name="btn_alter_save">保存</string>

    <!--ChatActivity-->
    <string name="tv_chat_title">z</string>

         <!--共用-->
    <string name="tv_chat_to_name">你好像很好吃</string>
    <string name="tv_chat_from_name">z</string>

    <string name="tv_chat_toword_time">2012-12-12 12:12:12</string>
    <string name="tv_chat_toword_info">啧神经网络真难</string>

    <string name="tv_chat_fromword_time">2012-12-12 12:12:12</string>
    <string name="tv_chat_fromword_info">嗯</string>

    <string name="tv_chat_topicture_time">2012-12-12 12:12:12</string>

    <string name="tv_chat_frompicture_time">2012-12-12 12:12:12</string>

    <string name="btn_chat_send">发送</string>

</resources>
