<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#E57741"
        >
        <!--好友请求-->
        <TextView
            android:id="@+id/tv_handlecard_title"
            android:text="@string/tv_handlecard_title"
            android:textSize="20sp"
            android:textColor="#429A8D"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="60dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:paddingBottom="10dp">
            <!--头像-->
            <TextView
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="160dp"
                android:id="@+id/tv_handlecard_hphint"
                android:text="@string/tv_card_hphint"
                android:textSize="16sp"
                android:textColor="#598ca1"
                android:drawableLeft="@drawable/ic_setting_info"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp">
                <ImageView
                    android:id="@+id/image_handlecard_hp"
                    android:background="@drawable/image_handlecard_hp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">
            <!--昵称-->
            <TextView
                android:id="@+id/id_p_fcard_name"
                android:text="@string/tv_card_namehint"
                android:paddingLeft="20dp"
                android:paddingRight="200dp"
                android:drawableLeft="@drawable/tv_card_namehint"
                android:textSize="16sp"
                android:textColor="#598ca1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!--Tinyuet-->
            <TextView
                android:id="@+id/tv_handlecard_name"
                android:text="@string/tv_handlecard_name"
                android:textSize="16sp"
                android:textColor="#737070"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">
            <!--性别-->
            <TextView
                android:id="@+id/tv_handlecard_genderhint"
                android:text="@string/tv_card_genderhint"
                android:paddingLeft="20dp"
                android:paddingRight="160dp"
                android:drawableLeft="@drawable/tv_card_genderhint"
                android:textSize="16sp"
                android:textColor="#598ca1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!--男-->
            <TextView
                android:id="@+id/tv_handlecard_gender"
                android:text="@string/tv_handlecard_gender"
                android:textSize="16sp"
                android:textColor="#737070"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">
            <!--个人说明-->
            <TextView
                android:id="@+id/tv_card_descriptionhint"
                android:text="@string/tv_card_descriptionhint"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:textSize="16sp"
                android:textColor="#598ca1"
                android:gravity="center"
                android:drawableLeft="@drawable/tv_card_descriptionhint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!--这个世界，还有太多的神奇，我们要一直欢笑，去发现美好。-->
            <TextView
                android:id="@+id/id_c_fcard_description"
                android:text="@string/tv_handlecard_description"
                android:textSize="16sp"
                android:paddingLeft="180dp"
                android:textColor="#737070"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <LinearLayout
            android:paddingTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--接受请求　-->
            <Button
                android:id="@+id/btn_handlecard_accept"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_handlecard_accept"
                android:textSize="16sp"
                android:textAlignment="viewStart"
                android:drawableLeft="@drawable/btn_handlecard_accept"
                android:textColor="#E57741"
                android:background="#429A8D"/>
            <Button
                android:id="@+id/btn_handlecard_reject"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_handlecard_reject"
                android:textSize="16sp"
                android:textAlignment="viewStart"
                android:drawableLeft="@drawable/btn_handlecard_reject"
                android:textColor="#E57741"
                android:background="#429A8D"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
