<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#E57741"
        >
        <TextView
            android:id="@+id/tv_friendcard_title"
            android:text="@string/tv_friendcard_title"
            android:textSize="20sp"
            android:textColor="#429A8D"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="60dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:paddingBottom="10dp">
            <TextView
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="160dp"
                android:id="@+id/tv_friendcard_hphint"
                android:text="@string/tv_card_hphint"
                android:textSize="16sp"
                android:textColor="#598ca1"
                android:drawableLeft="@drawable/ic_setting_info"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp">
                <ImageView
                    android:id="@+id/image_friendcard_hp"
                    android:background="@drawable/image_friendcard_hp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">
            <TextView
                android:id="@+id/tv_friendcard_namehint"
                android:text="@string/tv_card_namehint"
                android:paddingLeft="20dp"
                android:paddingRight="150dp"
                android:drawableLeft="@drawable/tv_card_namehint"
                android:textSize="16sp"
                android:textColor="#598ca1"

                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_friendcard_name"
                android:text="@string/tv_friendcard_name"
                android:textSize="16sp"
                android:textColor="#737070"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">
            <!--性别-->
            <TextView
                android:id="@+id/tv_friendcard_genderhint"
                android:text="@string/tv_card_genderhint"
                android:paddingLeft="20dp"
                android:paddingRight="160dp"
                android:drawableLeft="@drawable/tv_card_genderhint"
                android:textSize="16sp"
                android:textColor="#598ca1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!--男-->
            <TextView
                android:id="@+id/tv_friendcard_gender"
                android:text="@string/tv_friendcard_gender"
                android:textSize="16sp"
                android:textColor="#737070"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">
            <TextView
                android:id="@+id/tv_friendcard_descriptionhint"
                android:text="@string/tv_card_descriptionhint"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                android:textColor="#598ca1"
                android:gravity="center"
                android:drawableLeft="@drawable/tv_card_descriptionhint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_friendcard_description"
                android:text="@string/tv_friendcard_description"
                android:textSize="16sp"
                android:paddingLeft="180dp"
                android:textColor="#737070"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <LinearLayout
            android:paddingTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_friendcard_sendmsg"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_friendcard_sendmsg"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:drawableLeft="@drawable/btn_friendcard_sendmsg"
                android:textColor="#E57741"
                android:background="#429A8D"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
