<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_chat_toword_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#f5f5f5"
        android:background="#bebebe"
        android:text="@string/tv_chat_toword_time"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_chat_toword_name"
                android:layout_gravity="center"
                android:text="@string/tv_chat_to_name"
                android:textSize="16sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_chat_toword_info"
                android:text="@string/tv_chat_toword_info"
                android:textSize="16sp"
                android:gravity="right"
                android:background="@drawable/tv_chat_to_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/image_chat_toword_hp"
                android:background="@drawable/image_chat_to_hp"
                android:layout_width="49dp"
                android:layout_height="49dp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>