<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#E57741"
        >
        <!--重置密码-->
        <TextView
            android:id="@+id/tv_resetpassword_title"
            android:text="@string/tv_resetpassword_title"
            android:textSize="20sp"
            android:textColor="#429A8D"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="45dp"
        android:paddingLeft="45dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--重置密码-->
            <TextView
                android:id="@+id/tv_resetpassword_resethint"
                android:textSize="16sp"
                android:text="@string/tv_resetpassword_resethint"
                android:textColor="#429A8D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_resetpassword_save"
                android:inputType="textPassword"
                android:backgroundTint="#429A8D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--确认密码-->
            <TextView
                android:id="@+id/tv_resetpassword_confirmhint"
                android:textSize="16sp"
                android:text="@string/tv_resetpassword_confirmhint"
                android:textColor="#429A8D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_resetpassword_confirm"
                android:inputType="textPassword"
                android:backgroundTint="#429A8D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="350dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <!--保存-->
        <Button
            android:id="@+id/btn_resetpassword_save"
            android:layout_marginTop="15dp"
            android:text="@string/btn_resetpassword_save"
            android:textColor="#E57741"
            android:textSize="20dp"
            android:background="#429A8D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
